dashboard/static/css/style.css
/* ... */
#job-info .button.warning { background-color:#dd8728;}
#job-info .button.alert { background-color:#9c210c;}
#job-info .alert-box {
	border: none;
	color: #fff;
	background: #aaa;
	font-family: 'Droid_Sans_Mono';
	font-size: 16px;
	font-size: 1rem;
}
#job-info .file-info > label {
	background-color: #eee;
	color: #666;
	border-top: 0px;
	text-align: center;
}
#job-info .file-info > label > span {
	font-size: 1.375em;
	font-weight: normal;
}
#job-info .file-info {
	-moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	-webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	padding-left: 0 !important;
	padding-right: 0 !important;
}


/* ********** Icon apps grid ********** */

#app-client-container {
	width: 100%;
	height: 100%;
    -webkit-transition: padding 0.5s; /* Safari */
    transition: padding 0.5s;
    visibility: hidden;
    overflow: hidden;
}

#app-menu-container {
	visibility: invisible;
}
#waiting_container {
	width: 100%;
	height: 100%;
	margin: auto;
	text-align: center;
	display: none;
}

#waiting_container svg {
	position: relative;
  	top: 50%;
  	transform: translateY(-50%);
  	color: #2E3865
}

#spinner-container {
	width: 100%;
	height: 100%;
}


.app-icon {
	width: 100px;
	width: 6.25rem;
	height: 128px;
	height: 8rem;
	text-align: center;
	margin: 16px;
	margin: 1rem;
	margin-bottom: 0;
	display: inline-block;
}

.app-icon .add {
	width: 100px;
	width: 6.25rem;
	height: 100px;
	height: 6.25rem;
	line-height: 76px;
	padding: 12px;
	padding: 0.75rem;
	border-radius: 8px;
	border-radius: 0.5rem;
	border: dashed 3px #bbb;
	color: #bbb;
	font-size: 35px;
}

.app-icon:hover .add {
	border: dashed 3px #666;
	color: #666;
}

.app-icon:hover .add-title {
	color: #666;
}

.add-title {
	margin-top: 4px;
	margin-top: 0.25rem;
	font-family: 'source_sans_proregular';
	color: #bbb;
	font-style: italic;
}


.app-icon[display=none] { display: none; }

.app-title {
	margin-top: 4px;
	margin-top: 0.25rem;
}

.app-title a {
	font-family: 'source_sans_proregular';
	color: #444;
	-webkit-transition: opacity .3s;
	transition: opacity .3s;
}

.app-icon:hover .app-title a {
	color: #333;
	-webkit-transition: opacity .6s;
	transition: opacity .6s;
}

.app-icon img {
	width: 100px;
	width: 6.25rem;
	height: 100px;
	height: 6.25rem;
	padding: 12px;
	padding: 0.75rem;
	border-radius: 8px;
	border-radius: 0.5rem;
	-moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	-webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	box-shadow: 0 1px 6px rgba(0,0,0,0.25);
	-moz-box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
	-webkit-box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
	box-shadow: 0 0.0626rem 0.375rem rgba(0,0,0,0.25);
}

.app-icon:hover img {
	-moz-box-shadow: 0 1px 8px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 1px 8px rgba(0,0,0,0.5);
	box-shadow: 0 1px 8px rgba(0,0,0,0.5);
	-moz-box-shadow: 0 0.0626rem 0.5rem rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0.0626rem 0.5rem rgba(0,0,0,0.5);
	box-shadow: 0 0.0626rem 0.5rem rgba(0,0,0,0.5);
	filter: alpha(opacity=100); /* For IE8 and earlier */
	opacity: 1;
	-webkit-transition: opacity .6s;
	transition: opacity .6s;
}

.app-icon.sortable-ghost, .sortable-ghost {
	border: 3px dashed #CCC;
	background : url('../img/icon_plus_cross.png') no-repeat center;
	background-size: 48px;
	background-size: 3rem;
}

.app-icon.sortable-ghost > *, .sortable-ghost > * {visibility: hidden;}

/* ********** iFrame main container ********** */
.app-iframe {
	width: 100%;
	height: 100%;
	border:0px;
}

#app_menu_container {
	list-style: none;
	height :100%;
	/*margin-left: auto;
	margin-right: auto;*/
	/* auto margins center the apps, but make them jump when the DRO is displayed (ick) */
}

/* ********** footer stuff********** */
.footBar {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 0px;
	background-color: #333333;
	z-index: 1006;
	display: block;
	transition: all 0.3s;
	box-shadow: 0px -2px 15px -6px rgba(0,0,0,0.75);
}

.pauseJob p {
	position: relative;
  	text-align: center;
	color: #ffffff;
	font-size: 3em;
	font-family: Arial;
	z-index: 10;
	padding-top: 35px;
}

.pauseJob {
    cursor: pointer;
	position: relative;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	width: 36%;
	height: 150px;
	margin-top: 12px;
	background: #ff0000;
	border: solid 5px #A60000;
	border-radius: 5px;
	text-decoration: none;
	transition: border background-color 2s linear;
}

/*
.pauseJob:before,
.pauseJob:after {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  width: 5px;

  height: 60px;
  margin-top: -30px;
  z-index: 1;
}
.pauseJob:after {
  left: auto;
  right: 0;
  margin-top: -30px;
  height: 60px;

}

.pauseJobInner {
  position: absolute;
  top: 0px;
  width: 150px;
  height: 150px;
  background: #ff0000;
  border: 5px solid #A60000;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  transition: all 2s linear;
}

.pauseJobInner:before,
.pauseJobInner:after {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  content: "";
  position: absolute;
  width: 5px;

  height: 60px;
  margin-top: -30px;
  z-index: 1;
  right: auto;
  left: 16px;
  bottom: auto;
  top: 19px;
  transition: all 2s linear;
}

.pauseJobInner:after {
  height: 60px;
  right: 16px;
  left: auto;
  bottom: -12px;
  top: auto;
  transition: all 2s linear;
}
/* ... */

